CREATE TABLE PACIENTE (
    COD_PAC SERIAL PRIMARY KEY,
    CPF TEXT UNIQUE NOT NULL,
    NOME TEXT NOT NULL,
    CONTATO TEXT,
    ENDERECO TEXT
);

CREATE TABLE MEDICAMENTO (
    COD_MED SERIAL PRIMARY KEY,
    NOME TEXT NOT NULL,
    BULA TEXT
);

CREATE TABLE ITEM_MED (
	COD_ITEM_MED SERIAL PRIMARY KEY,
	COD_CONS_INTER INT NOT NULL,
	COD_MED INT NOT NULL,
	QUANTIDADE INT NOT NULL,
	CONS_OU_INTER VARCHAR(1) NOT NULL,
	FOREIGN KEY (COD_MED) REFERENCES MEDICAMENTO(COD_MED),
	CONSTRAINT CONSULTA_OU_INTERNACAO CHECK (CONS_OU_INTER ILIKE 'C' OR CONS_OU_INTER ILIKE 'I')
);

DROP TABLE ITEM_MED;

CREATE TABLE CARGO (
    COD_CARGO SERIAL PRIMARY KEY,
    NOME TEXT NOT NULL,
    SALARIO NUMERIC(10, 2) NOT NULL
);

CREATE TABLE FUNCIONARIO (
    COD_FUNC SERIAL PRIMARY KEY,
    NOME TEXT NOT NULL,
    CPF TEXT UNIQUE NOT NULL,
    COD_CARGO INT,
    FOREIGN KEY (COD_CARGO) REFERENCES CARGO(COD_CARGO)
);

CREATE TABLE SERVICO (
    COD_SERVICO SERIAL PRIMARY KEY,
    NOME TEXT NOT NULL,
    DESCRICAO TEXT,
    PRECO NUMERIC(10, 2) NOT NULL
);

CREATE TABLE MEDICO (
    CRM INT PRIMARY KEY,
    NOME TEXT NOT NULL,
    CPF TEXT UNIQUE NOT NULL,
	CONTATO TEXT NOT NULL,
	ENDERECO TEXT NOT NULL
);

CREATE TABLE SUPERVISAO (
    COD_SUPERVISAO SERIAL PRIMARY KEY,
    COD_SUPERVISOR INT,
    COD_SUPERVISIONA INT,
    FOREIGN KEY (COD_SUPERVISOR) REFERENCES MEDICO(CRM),
    FOREIGN KEY (COD_SUPERVISIONA) REFERENCES MEDICO(CRM)
);

CREATE TABLE PLANO (
    COD_PLANO SERIAL PRIMARY KEY,
    NOME TEXT NOT NULL,
    VALOR_CON NUMERIC(10, 2)NOT NULL,
    VALOR_INT NUMERIC(10, 2) NOT NULL
);


CREATE TABLE PROCEDIMENTO (
    COD_PROCED SERIAL PRIMARY KEY,
    COD_FUNC INT,
    COD_SERVICO INT,
    COD_PAC INT,
    DT_ATEND DATE NOT NULL,
    VALOR NUMERIC(10, 2) NOT NULL,
    FOREIGN KEY (COD_FUNC) REFERENCES FUNCIONARIO(COD_FUNC),
    FOREIGN KEY (COD_SERVICO) REFERENCES SERVICO(COD_SERVICO),
    FOREIGN KEY (COD_PAC) REFERENCES PACIENTE(COD_PAC)
);

CREATE TABLE CONSULTA (
    COD_CONSUL SERIAL PRIMARY KEY,
    COD_PAC INT,
    CRM INT,
	COD_PLANO INT,
    MOTIVO TEXT NOT NULL,
    DT_PREV_CONSULTA DATE NOT NULL,
    DT_CONSUL DATE DEFAULT NULL,
    VALOR NUMERIC(10, 2),
    STATUS VARCHAR NOT NULL,
    FOREIGN KEY (COD_PAC) REFERENCES PACIENTE(COD_PAC),
	FOREIGN KEY (COD_PLANO) REFERENCES PLANO(COD_PLANO),
    FOREIGN KEY (CRM) REFERENCES MEDICO(CRM),
	CONSTRAINT REALIZADA_OU_AGENDADA CHECK (STATUS ILIKE 'R' OR STATUS ILIKE 'A')
);

DROP TABLE CONSULTA;

CREATE TABLE PM (
    COD_PM SERIAL PRIMARY KEY,
    COD_MED INT,
    COD_PLANO INT,
    PRECO NUMERIC(10, 2) NOT NULL,
    FOREIGN KEY (COD_MED) REFERENCES MEDICAMENTO(COD_MED),
    FOREIGN KEY (COD_PLANO) REFERENCES PLANO(COD_PLANO)
);

CREATE TABLE APARTAMENTO (
    NUMERO INT PRIMARY KEY,
    LOCALIZACAO TEXT NOT NULL
);

CREATE TABLE INTERNACAO (
    COD_INTERNA SERIAL PRIMARY KEY,
    COD_PAC INT,
	COD_PLANO INT,
    CRM INT,
    NUMERO INT,
    DT_INTERNA DATE NOT NULL,
    VALOR NUMERIC(10, 2),
    DT_CONCLUSAO DATE,
    MOTIVO TEXT,
    CONCLUSAO TEXT, -- ALTA OU ÓBITO
	FOREIGN KEY (COD_PLANO) REFERENCES PLANO(COD_PLANO),
    FOREIGN KEY (COD_PAC) REFERENCES PACIENTE(COD_PAC),
    FOREIGN KEY (CRM) REFERENCES MEDICO(CRM),
    FOREIGN KEY (NUMERO) REFERENCES APARTAMENTO(NUMERO)
);


SELECT INSERIR_LINHA('PACIENTE', '12345678900', 'João Silva', '123456789', 'Rua A');
SELECT INSERIR_LINHA('PACIENTE', '98765432100', 'Maria Oliveira', '987654321', 'Rua B');


SELECT INSERIR_LINHA('MEDICAMENTO', 'Paracetamol', 'Medicamento para febre e dor');
SELECT INSERIR_LINHA('MEDICAMENTO', 'Ibuprofeno', 'Anti-inflamatório e analgésico');

SELECT * FROM ITEM_MED
SELECT INSERIR_LINHA('ITEM_MED', '1', '1', '10', 'C');
SELECT INSERIR_LINHA('ITEM_MED', '1', '2', '5', 'I');

SELECT * FROM CARGO;
SELECT INSERIR_LINHA('CARGO', 'Enfermeiro', '3000.00');
SELECT INSERIR_LINHA('CARGO', 'Técnico', '2500.00');

SELECT * FROM FUNCIONARIO;
SELECT INSERIR_LINHA('FUNCIONARIO', 'Carlos Souza', '12345678900', '1');
SELECT INSERIR_LINHA('FUNCIONARIO', 'Ana Lima', '98765432100', '2');

SELECT * FROM SERVICO;
SELECT INSERIR_LINHA('SERVICO', 'Exame de Sangue', 'Coleta de sangue para exames laboratoriais', '80.00');

SELECT * FROM MEDICO;
SELECT INSERIR_LINHA('MEDICO', '11111', 'Dr. Pedro Mendes', '12345678900', '999999999', 'Rua X');
SELECT INSERIR_LINHA('MEDICO', '22222', 'Dra. Carla Santos', '98765432100', '888888888', 'Rua Y');

SELECT * FROM SUPERVISAO;
SELECT INSERIR_LINHA('SUPERVISAO', '11111', '22222');

SELECT * FROM PLANO;
SELECT INSERIR_LINHA('PLANO', 'Plano Básico', '100.00', '200.00');
SELECT INSERIR_LINHA('PLANO', 'Plano Premium', '200.00', '400.00');

SELECT * FROM PROCEDIMENTO;
SELECT * FROM PACIENTE;
SELECT INSERIR_LINHA('PROCEDIMENTO', '1', '1', '1', '2024-09-01', '150.00');

SELECT * FROM CONSULTA;
SELECT INSERIR_LINHA('CONSULTA', '1', '11111', '1', 'Dor de cabeça', '2024-09-10', 'A');
-- COD_PAC, CRM, COD_PLANO, MOTIVO, DT_PREV_CONSULTA, DT_CONSUL, STATUS

SELECT * FROM PM;
SELECT INSERIR_LINHA('PM', '1', '1', '50.00');
SELECT INSERIR_LINHA('PM', '2', '1', '50.00');

SELECT * FROM APARTAMENTO;
SELECT INSERIR_LINHA('APARTAMENTO', '101', 'Bloco A');

SELECT * FROM PACIENTE;
SELECT * FROM INTERNACAO;
SELECT INSERIR_LINHA('INTERNACAO', '1', '2', '11111', '101', 'Cirurgia', '2024-09-15');
-- (COD_PAC, COD_PLANO, CRM, NUMERO, MOTIVO, DT_INTERNA)








					 










